--- a/src/components/SubredditList/SubredditList.css
+++ b/src/components/SubredditList/SubredditList.css
@@ -3,6 +3,20 @@
     padding: 0;
 }
 
-body {
+.subreddit-list {
     color: #fff;
+    background-color: #0B1416;
+    border: 1px solid #fff;
+    width: 65%;
+    height: 100vh;
+}
+
+.heading {
+    margin-top: 1rem;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+}
+
+.subreddit-item {
+    margin-bottom: 1.5rem;
 }
